message(STATUS "Generating build files for 554.roms_r...")

file(GLOB_RECURSE HEADER_FILE_554 src/*.h)

set(SRC_FILE_554
    src/mod_kinds.F90
    src/bbl.F90
    src/mod_sediment.F90
    src/conv_3d.F90
    src/conv_2d.F90
    src/conv_bry2d.F90
    src/mp_exchange.F90
    src/distribute.F90
    src/mod_biology.F90
    src/mod_bbl.F90
    src/mod_eclight.F90
    src/mod_boundary.F90
    src/bvf_mix.F90
    src/conv_bry3d.F90
    src/mod_strings.F90
    src/mod_clima.F90
    src/mod_sources.F90
    src/strings.F90
    src/forcing.F90
    src/frc_adjust.F90
    src/mod_obs.F90
    src/get_idata.F90
    src/mod_tides.F90
    src/gls_corstep.F90
    src/tkebc_im.F90
    src/gls_prestep.F90
    src/hmixing.F90
    src/ini_adjust.F90
    src/mod_fourdvar.F90
    src/ocean_coupler.F90
    src/mod_coupler.F90
    src/roms_export.F90
    src/roms_import.F90
    src/wpoints.F90
    src/interp_floats.F90
    src/mod_storage.F90
    src/dotproduct.F90
    src/obc_adjust.F90
    src/set_avg.F90
    src/mod_average.F90
    src/lmd_bkpp.F90
    src/step_floats.F90
    src/mod_floats.F90
    src/main2d.F90
    src/mod_diags.F90
    src/sed_bedload.F90
    src/radiation_stress.F90
    src/biology.F90
    src/sediment.F90
    src/my25_corstep.F90
    src/sed_fluxes.F90
    src/sed_surface.F90
    src/oi_update.F90
    src/set_tides.F90
    src/vwalk_floats.F90
    src/obc_volcons.F90
    src/sed_settling.F90
    src/sed_bed.F90
    src/back_cost.F90
    src/wetdry.F90
    src/my25_prestep.F90
    src/cgradient.F90
    src/normalization.F90
    src/cost_grad.F90
    src/posterior.F90
    src/packing.F90
    src/mpdata_adiff.F90
    src/propagator.F90
    src/random_ic.F90
    src/sum_grad.F90
    src/posterior_var.F90
    src/zeta_balance.F90
    src/def_avg.F90
    src/congrad.F90
    src/def_diags.F90
    src/def_floats.F90
    src/def_hessian.F90
    src/extract_obs.F90
    src/frc_weak.F90
    src/def_ini.F90
    src/def_lanczos.F90
    src/def_norm.F90
    src/def_gst.F90
    src/def_error.F90
    src/def_impulse.F90
    src/def_mod.F90
    src/def_station.F90
    src/get_2dfldr.F90
    src/get_3dfldr.F90
    src/def_tides.F90
    src/get_ngfldr.F90
    src/get_gst.F90
    src/get_grid.F90
    src/ini_lanczos.F90
    src/obs_cost.F90
    src/grid_coords.F90
    src/set_3dfldr.F90
    src/obs_initial.F90
    src/obs_read.F90
    src/mp_routines.F90
    src/obs_write.F90
    src/set_2dfldr.F90
    src/rep_matrix.F90
    src/stats_modobs.F90
    src/obs_depth.F90
    src/set_diags.F90
    src/wrt_avg.F90
    src/set_ngfldr.F90
    src/wrt_floats.F90
    src/wrt_hessian.F90
    src/wrt_diags.F90
    src/esmf_roms.F90
    src/wrt_ini.F90
    src/mod_eoscoef.F90
    src/wrt_station.F90
    src/mod_nesting.F90
    src/wrt_impulse.F90
    src/wrt_error.F90
    src/wrt_gst.F90
    src/wrt_tides.F90
    src/utility.F90
    src/lubksb.F90
    src/mod_param.F90
    src/mod_stepping.F90
    src/mod_iounits.F90
    src/ludcmp.F90
    src/get_date.F90
    src/exchange_2d.F90
    src/exchange_3d.F90
    src/state_scale.F90
    src/state_initialize.F90
    src/mod_coupling.F90
    src/mod_scalars.F90
    src/state_copy.F90
    src/nrutil.F90
    src/mod_parallel.F90
    src/ran_state.F90
    src/state_addition.F90
    src/checkerror.F90
    src/ran1.F90
    src/timers.F90
    src/checkadj.F90
    src/shapiro.F90
    src/mod_forces.F90
    src/bc_bry2d.F90
    src/gasdev.F90
    src/set_weights.F90
    src/mod_ocean.F90
    src/checkdefs.F90
    src/bc_bry3d.F90
    src/set_zeta.F90
    src/mod_mixing.F90
    src/lmd_swfrac.F90
    src/white_noise.F90
    src/mod_grid.F90
    src/interpolate.F90
    src/mod_arrays.F90
    src/v3dbc_im.F90
    src/zetabc.F90
    src/u2dbc_im.F90
    src/u3dbc_im.F90
    src/t3dbc_im.F90
    src/v2dbc_im.F90
    src/bc_2d.F90
    src/stiffness.F90
    src/set_scoord.F90
    src/set_massflux.F90
    src/mod_ncparam.F90
    src/get_data.F90
    src/diag.F90
    src/bc_3d.F90
    src/set_depth.F90
    src/ocean_control.F90
    src/set_ngfld.F90
    src/regrid.F90
    src/abort.F90
    src/set_vbc.F90
    src/master.F90
    src/get_bounds.F90
    src/set_2dfld.F90
    src/set_3dfld.F90
    src/state_dotprod.F90
    src/state_product.F90
    src/mod_netcdf.F90
    src/close_io.F90
    src/output.F90
    src/nf_fwrite2d.F90
    src/def_dim.F90
    src/omega.F90
    src/nf_fwrite3d.F90
    src/nf_fread4d.F90
    src/nf_fread3d.F90
    src/nf_fread2d_bry.F90
    src/get_cycle.F90
    src/extract_sta.F90
    src/bulk_flux.F90
    src/nf_fwrite3d_bry.F90
    src/rho_eos.F90
    src/nf_fread3d_bry.F90
    src/nf_fwrite2d_bry.F90
    src/checkvars.F90
    src/nf_fwrite4d.F90
    src/get_varcoords.F90
    src/uv3dmix.F90
    src/prsgrd.F90
    src/wrt_rst.F90
    src/def_var.F90
    src/def_rst.F90
    src/wvelocity.F90
    src/get_ngfld.F90
    src/get_3dfld.F90
    src/wrt_his.F90
    src/metrics.F90
    src/nf_fread2d.F90
    src/ini_fields.F90
    src/step3d_t.F90
    src/wrt_info.F90
    src/t3dmix.F90
    src/analytical.F90
    src/get_2dfld.F90
    src/set_data.F90
    src/def_info.F90
    src/initial.F90
    src/def_his.F90
    src/get_state.F90
    src/lmd_skpp.F90
    src/lmd_vmix.F90
    src/inp_par.F90
    src/pre_step3d.F90
    src/step3d_uv.F90
    src/step2d.F90
    src/rhs3d.F90
    src/main3d.F90
)

add_library(roms_r SHARED
    ${SRC_FILE_554}
    ${HMSPEC_ROOT_DIR}/Fortran_main.c
)

target_compile_definitions(roms_r PRIVATE
    -DSPEC -DNDEBUG -DSPEC_AUTO_SUPPRESS_OPENMP -DSPEC_LP64
    -DBENCHMARK -DNestedGrids=1 -DNO_GETTIMEOFDAY
)


target_include_directories(roms_r PRIVATE
    "D:/llvm-project/flang/include"
    "src"
)

target_link_libraries(roms_r PRIVATE
    FortranRuntime
    FortranDecimal
    clang_rt.builtins
)
